# forge-gpu

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: large-file-strategy.md
.claude/skills/: README.md
.github/workflows/: build-and-test.yml  claude-code-review.yml  (+4 more)
common/: forge.h
docs/: FORGE_SHAPES.md  FORGE_SHAPES_LESSON.md
lessons/03-uniforms-and-motion/: CMakeLists.txt  README.md  main.c
lessons/03-uniforms-and-motion/shaders/: triangle.frag.hlsl  triangle.vert.hlsl  triangle_frag_dxil.h  triangle_vert_dxil.h  triangle_vert_spirv.h
lessons/assets/01-pipeline-scaffold/: README.md  pipeline.toml  pyproject.toml
lessons/assets/01-pipeline-scaffold/assets/raw/textures/: detail.tga
lessons/assets/01-pipeline-scaffold/pipeline/: __main__.py  config.py
lessons/assets/01-pipeline-scaffold/tests/: test_config.py
lessons/engine/01-intro-to-c/: CMakeLists.txt  README.md  main.c
lessons/engine/02-cmake-fundamentals/: CMakeLists.txt  README.md  greeting.c  greeting.h  main.c
lessons/engine/03-fetchcontent-dependencies/: CMakeLists.txt  README.md  main.c
lessons/engine/04-pointers-and-memory/: CMakeLists.txt  README.md  main.c
lessons/engine/05-header-only-libraries/: CMakeLists.txt  README.md  main.c  my_vec.h  physics.c  physics.h
lessons/engine/06-reading-error-messages/: CMakeLists.txt  README.md  main.c
lessons/engine/07-using-a-debugger/: CMakeLists.txt  README.md  main.c
lessons/engine/08-renderdoc/: CMakeLists.txt  README.md  main.c
lessons/engine/09-hlsl-shared-headers/: CMakeLists.txt  README.md  main.c  shared_params.h  sky_pass.c  sky_pass.h
lessons/engine/10-cpu-rasterization/: CMakeLists.txt  README.md  main.c
lessons/engine/11-git-version-control/: CMakeLists.txt  README.md  main.c
lessons/gpu/01-hello-window/: CMakeLists.txt  README.md  main.c
lessons/gpu/02-first-triangle/: CMakeLists.txt  README.md  main.c
lessons/gpu/02-first-triangle/shaders/: triangle.frag.hlsl  triangle.vert.hlsl  triangle_frag_dxil.h  triangle_frag_spirv.h  triangle_vert_dxil.h  triangle_vert_spirv.h
lessons/gpu/02-first-triangle/shaders/compiled/: triangle_frag_dxil.h  triangle_frag_spirv.h  triangle_vert_dxil.h  triangle_vert_spirv.h
lessons/gpu/03-uniforms-and-motion/: CMakeLists.txt  README.md  main.c
lessons/gpu/03-uniforms-and-motion/shaders/: triangle.frag.dxil  triangle.vert.dxil  triangle.vert.hlsl  triangle.vert.spv  triangle_vert_dxil.h
lessons/gpu/03-uniforms-and-motion/shaders/compiled/: triangle_vert_dxil.h  triangle_vert_spirv.h
lessons/gpu/04-textures-and-samplers/: CMakeLists.txt  README.md  main.c
lessons/gpu/04-textures-and-samplers/shaders/: quad.frag.hlsl  quad.vert.dxil  quad.vert.hlsl  quad.vert.spv  quad_vert_dxil.h
lessons/gpu/04-textures-and-samplers/shaders/compiled/: quad_frag_dxil.h  quad_frag_spirv.h  quad_vert_dxil.h  quad_vert_spirv.h
lessons/gpu/05-mipmaps/: CMakeLists.txt  README.md  main.c
lessons/gpu/05-mipmaps/shaders/: quad.frag.hlsl  quad.vert.dxil  quad.vert.hlsl  quad_vert_spirv.h
lessons/gpu/05-mipmaps/shaders/compiled/: quad.frag.dxil  quad.frag.spv  quad.vert.spv  quad_frag_dxil.h  quad_frag_spirv.h  quad_vert_dxil.h  quad_vert_spirv.h
lessons/gpu/06-depth-and-3d/: CMakeLists.txt  README.md  main.c
lessons/gpu/06-depth-and-3d/shaders/: cube.frag.hlsl  cube.vert.dxil  cube.vert.hlsl  cube_frag_dxil.h
lessons/gpu/06-depth-and-3d/shaders/compiled/: cube_frag_dxil.h  cube_frag_spirv.h  cube_vert_dxil.h  cube_vert_spirv.h
lessons/gpu/07-camera-and-input/: CMakeLists.txt  README.md  main.c
lessons/gpu/07-camera-and-input/shaders/: scene.frag.hlsl  scene.vert.hlsl  scene.vert.spv  scene_frag_dxil.h  scene_frag_spirv.h
lessons/gpu/07-camera-and-input/shaders/compiled/: scene_frag_dxil.h  scene_frag_spirv.h  scene_vert_dxil.h  scene_vert_spirv.h
lessons/gpu/08-mesh-loading/: CMakeLists.txt  README.md  main.c
lessons/gpu/08-mesh-loading/shaders/: mesh.frag.dxil  mesh.frag.hlsl  mesh.vert.dxil  mesh.vert.hlsl  mesh_frag_spirv.h  mesh_vert_dxil.h  mesh_vert_spirv.h
lessons/gpu/08-mesh-loading/shaders/compiled/: mesh.frag.spv  mesh.vert.spv  mesh_frag_dxil.h  mesh_frag_spirv.h  mesh_vert_dxil.h  mesh_vert_spirv.h
lessons/gpu/09-scene-loading/: CMakeLists.txt  README.md  main.c
lessons/gpu/09-scene-loading/assets/CesiumMilkTruck/: CesiumMilkTruck.gltf
lessons/gpu/09-scene-loading/assets/VirtualCity/: VirtualCity.gltf
lessons/gpu/09-scene-loading/shaders/: scene.frag.dxil  scene.frag.hlsl  scene.vert.dxil  scene.vert.hlsl  scene.vert.spv  scene_frag_spirv.h
lessons/gpu/09-scene-loading/shaders/compiled/: scene.frag.spv  scene_frag_dxil.h  scene_frag_spirv.h  scene_vert_dxil.h  scene_vert_spirv.h
lessons/gpu/10-basic-lighting/: CMakeLists.txt  README.md  main.c
lessons/gpu/10-basic-lighting/shaders/: lighting.vert.dxil  lighting.vert.hlsl  lighting.vert.spv  lighting_vert_dxil.h  lighting_vert_spirv.h
lessons/gpu/10-basic-lighting/shaders/compiled/: lighting.frag.dxil  lighting_vert_dxil.h
lessons/gpu/12-shader-grid/: CMakeLists.txt  README.md  main.c
lessons/gpu/12-shader-grid/shaders/: grid.frag.dxil  grid.frag.hlsl  grid.frag.spv  grid.vert.hlsl  grid_frag_dxil.h  lighting.frag.hlsl  lighting.frag.spv  lighting_frag_spirv.h  lighting_vert_spirv.h
lessons/gpu/12-shader-grid/shaders/compiled/: grid_frag_dxil.h  grid_frag_spirv.h  lighting_frag_dxil.h  lighting_frag_spirv.h  lighting_vert_spirv.h
pipeline/: README.md  __init__.py  __main__.py  config.py  plugin.py  scanner.py
scripts/: bin_to_header.py  capture_lesson.py  check_math_blocks.py  cloud-setup.sh  compile_shaders.py  equirect_to_cubemap.py  forge_diagrams.py  run.py  setup.py
skills/: 01-sdl-gpu-setup.md
tests/gltf/: CMakeLists.txt  test_gltf.c
tests/math/: CMakeLists.txt  README.md  test_math.c
tests/raster/: CMakeLists.txt  test_raster.c
tests/ui/: CMakeLists.txt  fuzz_text_input.c  test_ui.c  test_ui_ctx.c  test_ui_state_isolation.c  test_ui_theme_contrast.c  test_ui_window.c
(+891 files in other folders)
